--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "gif.js": "^0.2.0",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
+    "react-router-dom": "^7.6.3",
     "three": "^0.178.0"
   },
   "devDependencies": {
