--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
     "react-icons": "^5.5.0",
+    "react-phone-input-2": "^2.15.1",
     "react-qr-code": "^2.0.18",
     "react-router-dom": "^7.6.3",
     "three": "^0.178.0"
