fixing login bug in another machine

--- a/.env.development
+++ b/.env.development
@@ -1,2 +1,12 @@
 VITE_MODE=development
 VITE_APP_ENV=development
+# API Configuration
+VITE_API_BASE_URL=http://localhost:8081
+
+# Development
+NODE_ENV=development
+
+# Ngrok configuration (update this with your actual ngrok URL)
+VITE_NGROK_URL=
+# Backend ngrok URL (update this with your actual backend ngrok URL)
+VITE_BACKEND_NGROK_URL=https://67b3ba630d1c.ngrok-free.app 
