--- a/.env.production
+++ b/.env.production
@@ -1,2 +1,11 @@
 VITE_MODE=production
 VITE_APP_ENV=production
+
+# API Configuration - will be updated by deploy script
+VITE_API_BASE_URL=http://localhost:8081
+VITE_NGROK_URL=
+# Backend ngrok URL - update this with your actual backend ngrok URL
+VITE_BACKEND_NGROK_URL=
+
+# Production
+NODE_ENV=production
