fix eyeicon svg for authentication UI

--- a/.env.development
+++ b/.env.development
@@ -9,4 +9,5 @@ NODE_ENV=development
 # Ngrok configuration (update this with your actual ngrok URL)
 VITE_NGROK_URL=
 # Backend ngrok URL (update this with your actual backend ngrok URL)
-VITE_BACKEND_NGROK_URL=https://09af18873686.ngrok-free.app 
+# https://09af18873686.ngrok-free.app 
+VITE_BACKEND_NGROK_URL= 
