test deploy aws backend user-service

--- a/.env.development
+++ b/.env.development
@@ -10,4 +10,5 @@ NODE_ENV=development
 VITE_NGROK_URL=
 # Backend ngrok URL (update this with your actual backend ngrok URL)
 # https://09af18873686.ngrok-free.app 
-VITE_BACKEND_NGROK_URL= 
+VITE_BACKEND_NGROK_URL= https://nwkg3ymv2p.ap-southeast-1.awsapprunner.com
+
