Update backend URL to AWS AppRunner

--- a/.env.production
+++ b/.env.production
@@ -5,7 +5,7 @@ VITE_APP_ENV=production
 VITE_API_BASE_URL=http://localhost:8081
 VITE_NGROK_URL=
 # Backend ngrok URL - update this with your actual backend ngrok URL
-VITE_BACKEND_NGROK_URL=
+VITE_BACKEND_NGROK_URL=https://nwkg3ymv2p.ap-southeast-1.awsapprunner.com
 
 # Production
 NODE_ENV=production
