--- a/.env.production
+++ b/.env.production
@@ -4,7 +4,7 @@ VITE_APP_ENV=production
 # API Configuration - will be updated by deploy script
 VITE_API_BASE_URL=http://localhost:8081
 VITE_NGROK_URL=
-# Backend ngrok URL - update this with your actual backend ngrok URL
+# Backend URL - AWS AppRunner  
 VITE_BACKEND_NGROK_URL=https://nwkg3ymv2p.ap-southeast-1.awsapprunner.com
 
 # Production
