--- a/.env.development
+++ b/.env.development
@@ -1,8 +1,8 @@
 VITE_MODE=development
 VITE_APP_ENV=development
 # API Configuration
-VITE_API_BASE_URL=http://localhost:8081
-
+VITE_API_BASE_URL=https://nwkg3ymv2p.ap-southeast-1.awsapprunner.com
+VITE_API_LOCAL_URL=localhost:8081
 # Development
 NODE_ENV=development
 
