commit for BOD member layout

--- a/.env.development
+++ b/.env.development
@@ -1,9 +1,20 @@
 VITE_MODE=development
 VITE_APP_ENV=development
-# API Configuration
-VITE_API_BASE_URL=http://localhost:8081
 
-# Development
+# API Configuration
+# VITE_API_BASE_URL=http://localhost:8081  # Commented out to enable auto-detection
+
+# Remote API Configuration (for login, auth, deployed backend)
+VITE_REMOTE_API_BASE_URL=https://nwkg3ymv2p.ap-southeast-1.awsapprunner.com
+
+# Development Backend Options
+# Option 1: Let system auto-detect port (8080, 8081, 3000, 5000)
+# Option 2: Force specific local port
+# VITE_USE_LOCAL_BACKEND=true
+# VITE_LOCAL_BACKEND_PORT=8080
+# Option 3: Use ngrok URL
+# VITE_BACKEND_NGROK_URL=https://your-ngrok-url.ngrok-free.app
+
 NODE_ENV=development
 
 # Ngrok configuration (update this with your actual ngrok URL)
